# rsorth

./: Cargo.toml  README.md  std.f  tests.f
src/: main.rs
src/lang/: code.rs  compilation.rs  mod.rs  source_buffer.rs  tokenizing.rs
src/runtime/: error.rs  interpreter.rs  mod.rs
src/runtime/built_ins/: ffi_words.rs  io_words.rs  mod.rs  terminal_words.rs  user_words.rs
src/runtime/built_ins/base_words/: array_words.rs  byte_buffer_words.rs  bytecode_words.rs  constant_words.rs  data_structure_words.rs  equality_words.rs  hash_table_words.rs  math_logic_and_bit_words.rs  mod.rs  sorth_words.rs  stack_words.rs  string_words.rs  value_type_words.rs  word_creation_words.rs  word_words.rs
src/runtime/built_ins/terminal_words/: mod.rs  unix.rs  windows.rs
src/runtime/data_structures/: byte_buffer.rs  contextual_data.rs  contextual_list.rs  data_object.rs  dictionary.rs  mod.rs  value.rs  value_hash.rs  value_vec.rs
src/runtime/interpreter/: mod.rs  sorth_interpreter.rs
std/: simple_repl.f
tests/: 02_test_structs.f  04_test_buffers.f
