
[package]
name = "sorth"
version = "0.1.17"
edition = "2021"
authors = [ "Chloë Strainge nullptr.0@gmail.com" ]

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"

[dependencies]


[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "consoleapi",
    "errhandlingapi",
    "processenv",
    "winbase",
    "handleapi",
    "wincon"
] }

libffi-sys = { version = "2.3.0", features = ["system"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
libffi = "3.2.0"
